# syncable-cli

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.agent  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  TUTORIAL.md  VULNERABILITY_CHECKING.md  azure-pipelines.yml  cargo_audit_sample.json  debug_expo_test.rs  debug_false_positive  debug_test  debug_test.rs  docker-compose.agent.yml  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh  installer-investigation-report.md  release-plz.toml  test_update_check.sh
.cargo/: config.toml
.claude-plugin/: marketplace.json
.cursor/rules/: encoreagentrules.mdc  project-rules.mdc  rust-rules.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
.planning/phases/01-audit-triage/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  TESTING-PROTOCOL.md
.qoder/quests/: analyze-folder.md  bun-audit-integration.md  command-event-normalization.md  javascript-framework-detection.md  posthog-integration-1757509446.md  posthog-integration.md  vulnerability-fix.md  vulnerability-scanning-setup.md
.qoder/rules/: project-rules.md  rust-rules.md
crates/ag-ui-core/: Cargo.toml
crates/ag-ui-core/src/: error.rs  event.rs  lib.rs  patch.rs  state.rs
crates/ag-ui-core/src/types/: content.rs  ids.rs  input.rs  message.rs  mod.rs  tool.rs
crates/ag-ui-server/: Cargo.toml
crates/ag-ui-server/src/: error.rs  lib.rs  producer.rs
crates/ag-ui-server/src/transport/: mod.rs  sse.rs  ws.rs
deploy/k8s/: agent-deployment.yaml
docs/: BUN_INTEGRATION.md  COLOR_ADAPTATION.md  cli-display-modes.md  command-overview.md  qoder-directory.md  telemetry.md
docs/superpowers/plans/: 2026-03-27-agent-output-pipeline.md  2026-03-27-npx-installer.md  2026-03-27-syncable-cli-skills.md
docs/superpowers/specs/: 2026-03-27-agent-output-pipeline-design.md  2026-03-27-npx-installer-design.md  2026-03-27-syncable-cli-skills-design.md
examples/: check_vulnerabilities.rs  debug_java_vulnerabilities.rs  enhanced_security.rs  security_analysis.rs  test_color_adaptation.rs  test_project_context.rs
installer/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
installer/.claude-plugin/: marketplace.json
installer/scripts/: copy-skills.js
installer/src/: constants.ts  index.ts  skills.ts  utils.ts
installer/src/agents/: claude.ts  codex.ts  cursor.ts  detect.ts  gemini.ts  types.ts  windsurf.ts
installer/src/commands/: install.ts  status.ts  uninstall.ts  update.ts
installer/src/prerequisites/: check.ts  install-cli.ts  install-rustup.ts
installer/src/transformers/: claude.ts  codex.ts  cursor.ts  gemini.ts  types.ts  windsurf.ts
installer/tests/: skills.test.ts  utils.test.ts
installer/tests/agents/: detect.test.ts
installer/tests/commands/: install.test.ts  status.test.ts  uninstall.test.ts
installer/tests/prerequisites/: check.test.ts
installer/tests/transformers/: claude.test.ts  codex.test.ts  cursor.test.ts  gemini.test.ts  windsurf.test.ts
patches/rig-bedrock/: .cargo_vcs_info.json  Cargo.toml
skills/commands/: syncable-analyze.md  syncable-dependencies.md  syncable-optimize.md  syncable-platform.md  syncable-security.md  syncable-validate.md  syncable-vulnerabilities.md
skills/workflows/: syncable-deploy-pipeline.md  syncable-iac-pipeline.md  syncable-project-assessment.md  syncable-security-audit.md
src/: cli.rs  error.rs  handlers.rs  lib.rs  main.rs
src/agent/: commands.rs  config.rs  history.rs  mod.rs  persistence.rs  session.rs  ui.rs
src/agent/compact/: config.rs  mod.rs  strategy.rs  summary.rs
src/agent/ide/: client.rs  detect.rs  mod.rs  types.rs
src/agent/prompts/: docker_self_correct.md  mod.rs
src/agent/session/: commands.rs  mod.rs  plan_mode.rs  providers.rs  ui.rs
src/agent/tools/: analyze.rs  background.rs  compression.rs  dclint.rs  diagnostics.rs  discover.rs  error.rs  fetch.rs  file_ops.rs  generate.rs  hadolint.rs  helmlint.rs  k8s_costs.rs  k8s_drift.rs  k8s_optimize.rs  kubelint.rs  mod.rs  output_store.rs  (+10 more)
src/analyzer/: dependency_parser.rs  display.rs  docker_analyzer.rs  framework_detector.rs  language_detector.rs  mod.rs  project_context.rs  runtime_detector.rs  security_analyzer.rs  tool_detector.rs  tool_installer.rs  vulnerability_checker.rs
src/auth/: credentials.rs  device_flow.rs  mod.rs
src/bedrock/: client.rs  completion.rs  embedding.rs  image.rs  streaming.rs
src/common/: command_utils.rs  file_utils.rs  mod.rs
src/config/: mod.rs  types.rs
src/generator/: compose_gen.rs  dockerfile_gen.rs  mod.rs  templates.rs  terraform_gen.rs
src/handlers/: analyze.rs  dependencies.rs  deploy.rs  generate.rs  mod.rs  optimize.rs  security.rs  tools.rs  utils.rs  vulnerabilities.rs
src/monitoring/: mod.rs  telemetry.rs
src/platform/: mod.rs  session.rs
src/server/: bridge.rs  mod.rs  processor.rs  routes.rs
src/telemetry/: client.rs  config.rs  mod.rs  test.rs  user.rs
src/wizard/: cloud_provider_data.rs  cluster_selection.rs  config_form.rs  dockerfile_selection.rs  environment_creation.rs  environment_selection.rs  infrastructure_selection.rs  mod.rs  orchestrator.rs  provider_selection.rs  recommendations.rs  registry_provisioning.rs  registry_selection.rs  render.rs  repository_selection.rs  service_endpoints.rs  target_selection.rs
syncable-ide-companion/: .vscodeignore  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
syncable-ide-companion/src/: diff-manager.ts  extension.ts  ide-server.ts  open-files-manager.ts  types.ts
test-dockerfile-errors/: Dockerfile
tests/: cd_generator_integration.rs  ci_generator_integration.rs  ci_generator_unit.rs  framework_fixture_detection.rs  integration_bun_audit.rs  javascript_framework_detection.rs  rust_vulnerability_checker_test.rs
tests/integration/: mod.rs  project_context_tests.rs  vulnerability_test.rs
tests/snapshots/: ci_generator_unit__github_actions_render_snapshot.snap
tests/test-dockerfile/: Dockerfile  Dockerfile.ubunto.test
(+523 files in other folders)
