[package]
name = "syncable-cli"
version = "0.22.0"
edition = "2024"
authors = ["Syncable Team"]
description = "A Rust-based CLI that analyzes code repositories and generates Infrastructure as Code configurations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/syncable-dev/syncable-cli"
keywords = ["iac", "infrastructure", "docker", "terraform", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# Platform support
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]

[[bin]]
name = "sync-ctl"
path = "src/main.rs"



[dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
walkdir = "2"
tera = "1"
indicatif = "0.17"
regex = "1"
glob = "0.3"
once_cell = "1"
rayon = "1.7"
termcolor = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
crossterm = "0.28"  # Terminal raw mode for interactive input
inquire = "0.7"     # Interactive terminal prompts with autocomplete
prettytable = "0.10"
term_size = "0.3"

# Vulnerability checking dependencies
rustsec = "0.30"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
textwrap = "0.16"
tempfile = "3"
dirs = "6"

# Performance dependencies for turbo security analyzer
aho-corasick = "1.1"              # Multi-pattern string matching
memmap2 = "0.9"                   # Memory-mapped file I/O
dashmap = "6"                     # Concurrent hashmap for caching
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }  # High-performance channels
blake3 = "1.5"                    # Fast hashing for cache keys
regex-automata = "0.4"            # Compiled regex sets
num_cpus = "1.16"                 # CPU count detection
parking_lot = "0.12"              # Faster mutex/rwlock
ahash = "0.8"                     # Fast hash function
bstr = "1.9"                      # Byte string utilities
simdutf8 = "0.1"                  # SIMD UTF-8 validation

# Telemetry dependencies
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
futures-util = "0.3"

# Agent dependencies (using Rig - LLM application framework)
rig-core = { version = "0.26", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[example]]
name = "check_vulnerabilities"
path = "examples/check_vulnerabilities.rs"

[[example]]
name = "security_analysis"
path = "examples/security_analysis.rs"
