[package]
name = "syncable-cli"
version = "0.27.2"
edition = "2024"
authors = ["Syncable Team"]
description = "A Rust-based CLI that analyzes code repositories and generates Infrastructure as Code configurations"
license = "GPL-3.0"
repository = "https://github.com/syncable-dev/syncable-cli"
keywords = ["iac", "infrastructure", "docker", "terraform", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# Platform support
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]

[[bin]]
name = "sync-ctl"
path = "src/main.rs"



[dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
walkdir = "2"
tera = "1"
indicatif = "0.18"
regex = "1"
glob = "0.3"
once_cell = "1"
rayon = "1.11"
termcolor = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
crossterm = "0.29"  # Terminal raw mode for interactive input
inquire = "0.7"     # Interactive terminal prompts with autocomplete
rustyline = "17"    # Readline-style input with completions
prettytable = "0.10"
term_size = "0.3"

# Vulnerability checking dependencies
rustsec = "0.30"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "sync", "process", "io-util"] }
textwrap = "0.16"
tempfile = "3"
dirs = "6"

# Performance dependencies for turbo security analyzer
aho-corasick = "1.1"              # Multi-pattern string matching
memmap2 = "0.9"                   # Memory-mapped file I/O
dashmap = "6"                     # Concurrent hashmap for caching
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }  # High-performance channels
blake3 = "1.5"                    # Fast hashing for cache keys
regex-automata = "0.4"            # Compiled regex sets
num_cpus = "1.16"                 # CPU count detection
parking_lot = "0.12"              # Faster mutex/rwlock
ahash = "0.8"                     # Fast hash function
bstr = "1.9"                      # Byte string utilities
simdutf8 = "0.1"                  # SIMD UTF-8 validation

# Telemetry dependencies
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
futures-util = "0.3"

# Agent dependencies (using Rig - LLM application framework)
rig-core = { version = "0.27", features = ["derive"] }
rig-bedrock = "0.3"  # AWS Bedrock provider for Rig

# Diff rendering for file confirmation UI
similar = "2.6"

# Markdown rendering and syntax highlighting
termimad = "0.30"              # Terminal markdown rendering
syntect = "5"                   # Syntax highlighting
strip-ansi-escapes = "0.2"      # Strip ANSI codes for testing

# Dockerfile linting (hadolint-rs)
nom = "7"                  # Parser combinators for Dockerfile parsing

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[example]]
name = "check_vulnerabilities"
path = "examples/check_vulnerabilities.rs"

[[example]]
name = "security_analysis"
path = "examples/security_analysis.rs"

# Patch rig-bedrock to fix extended thinking support with tool use
# The upstream version drops Reasoning blocks when a tool call is present.
# See: patches/rig-bedrock/src/types/assistant_content.rs for the fix.
[patch.crates-io]
rig-bedrock = { path = "patches/rig-bedrock" }
