[package]
name = "ag-ui-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Core type library for AG-UI protocol - Syncable SDK"
readme = "README.md"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-patch = "3"
jsonptr = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
